2003-09-29  Chris Toshok  <toshok@ximian.com>

	* gui/component/addressbook.c: e-book-util.h -> eab-book-util.h

	* gui/component/addressbook-component.c: e-book-util.h ->
	eab-book-util.h.
	(new_item_cb): enable the contact editor portion of this.
	(user_create_new_item_cb): convert to async_load_uri api, and
	ifdef the _use_default_book crap.
	(ensure_completion_uris_exist): e_book_get_config_database ->
	eab_get_config_database.

	* gui/component/e-address-widget.h: e-book-util.h ->
	eab-book-util.h.

	* gui/component/Makefile.am (libevolution_addressbook_la_LIBADD):
	add selectnames back in, and add util/libeabutil.la.

2003-09-29  Chris Toshok  <toshok@ximian.com>

	* backend/ebook/e-contact.c: my head explodes from so many
	changes.

	* backend/ebook/e-contact.h: reorder fields such that all the
	string fields are first in the enum (and add a
	E_CONTACT_LAST_SIMPLE_STRING value, ala the old e-card-simple
	stuff.)  Also, add E_CONTACT_LOGO, WANTS_HTML, IS_LIST, and
	LIST_SHOW_ADDRESSES.  remove E_CONTACT_PHOTO_URI.

	* backend/ebook/e-vcard.c (e_vcard_remove_attribute): rename from
	e_card_remove_attribute, and add a g_assert_not_reached.
	(_evc_base64_encode_simple): make this not static (we need it for
	a test.)
	(_evc_base64_decode_simple): same.

	* backend/ebook/e-vcard.h: add LOGO, X-MOZILLA-HTML,
	X-EVOLUTION-LIST, and X-EVOLUTION-LIST-SHOW_ADDRESSES #defines.
																
	* backend/ebook/e-book.c (EBookLoadState): change from
	UriNotLoaded to E_BOOK_URI_NOT_LOADED, etc.
	(e_book_add_contact): track _URI_ change.
	(e_book_get_supported_fields): same.
	(e_book_get_supported_auth_methods): same.
	(e_book_authenticate_user): same.
	(e_book_get_contact): same.
	(e_book_response_get_contact): remove the ifdefed call to
	e_contact_set_book.
	(e_book_remove_contacts): track _URI_ change.
	(e_book_get_book_view): same.
	(e_book_get_contacts): same.
	(e_book_get_changes): same.
	(e_book_remove): same.
	(e_book_unload_uri): same.
	(e_book_load_uri): same.